// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldDefs > boolean 1`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 2`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 3`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": null,
  },
  "nullable": true,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 4`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": "foo",
  },
  "nullable": true,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 5`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": "foo",
  },
  "nullable": true,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 6`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 7`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": null,
  },
  "nullable": true,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 8`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": {
      "name": "Bob",
    },
  },
  "nullable": true,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 9`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 10`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 11`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": null,
  },
  "nullable": true,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 12`] = `
{
  "autoIncrement": false,
  "columnType": "text",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": 2022-02-02T00:00:00.000Z,
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 13`] = `
{
  "autoIncrement": false,
  "columnType": "integer",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 14`] = `
{
  "autoIncrement": false,
  "columnType": "integer",
  "default": {
    "_id": "Option",
    "_tag": "None",
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;

exports[`FieldDefs > boolean 15`] = `
{
  "autoIncrement": false,
  "columnType": "integer",
  "default": {
    "_id": "Option",
    "_tag": "Some",
    "value": false,
  },
  "nullable": false,
  "primaryKey": false,
  "schema": [Function],
}
`;
